--- a/css/post.css
+++ b/css/post.css
@@ -1,6 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Karla&family=Work+Sans&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Epilogue:wght@500&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Karla&family=Epilogue:wght@500&family=JetBrains+Mono&display=swap');
 
 body {
   margin: 0px;
@@ -10,13 +8,13 @@ body {
 }
 
 [data-theme='dark'] {
-  --fg-color: rgb(155 165 165);
-  --heading-color: rgb(180 180 180);
+  --fg-color: #e4e4e4;
+  --heading-color: #ffffff;
   --bg-color: rgb(32, 35, 37);
   --info-color: gray;
   --accent-color: rgb(32, 35, 37);
   --logo-color: #fed130d3;
-  --link-color: #01a3a4;
+  --link-color: #61AFEF;
 }
 
 [data-theme='light'] {
@@ -40,6 +38,10 @@ body {
 }
 
 /* navbar */
+
+code {
+  font-family: 'JetBrains Mono', monospace, sans-serif;
+}
 
 .navbar {
   display: grid;
@@ -116,6 +118,7 @@ a:active {
 
 a:hover {
   text-decoration: underline;
+  color: var(--link-color);
 }
 
 .nav {
