--- a/11ty/_includes/components/post_macros.njk
+++ b/11ty/_includes/components/post_macros.njk
@@ -51,5 +51,38 @@
       </label>
     </div>
   </div>
+
+{% endmacro %}
+
+{# A macro that expands to my icons linked to my socials (github and twitter) #}
+{% macro socials() %}
+
+  <div class="socials-section">
+    <hr/>
+    <div class="social-icons">
+      
+      <a class="social-icon" href="https://www.twitter.com/" target="_blank">
+        <img class="social-img" src="../assets/svg/twitter.svg"/>
+      </a>
+
+      <a class="social-icon" href="https://www.github.com/srijan-paul" target="_blank">
+        <img class="social-img filterclass" src="../assets/svg/github.svg"/>
+      </a>
+
+      <a class="social-icon" href="https://srijan-paul.github.io" target="_blank">
+        <img class="social-img filterclass" src="../assets/svg/www.svg"/>
+      </a>
+
+      <a class="social-icon" href="mailto:srijannr1@gmail.com" target="_blank">
+        <img class="social-img" src="../assets/svg/gmail.svg"/>
+      </a>
+
+    </div>
+
+    <div class="copyright"> 
+      Copyright Ⓒ 2020-2021 Srijan Paul.
+      <div class="copyright-note"> Why do blog sites need copyrights anyway? </div>
+    </div>
   
+  </div>
 {% endmacro %}
