--- a/css/post.css
+++ b/css/post.css
@@ -80,6 +80,8 @@ body {
   line-height: 1.2;
 }
 
+/* Bullet Lists */
+
 ul li {
   list-style: disc outside;
   margin-left: 2%;
@@ -116,6 +118,8 @@ img {
   width: 100%;
 }
 
+/* Blockquotes */
+
 blockquote {
   background: var(--bq-bg);
   border-left: 10px solid var(--bq-border);
@@ -144,6 +148,26 @@ blockquote:after {
 blockquote p {
   display: inline;
 }
+
+/* Tables */
+
+.toc th {
+  padding: 0.3rem 1.2rem;
+}
+
+.toc  td {
+  padding: 0.3rem 1.2rem;
+  border-bottom: 1px solid #e1e1e1;
+  /* border: none; */
+}
+
+.toc table {
+  padding: 0rem;
+  border: 1px solid #e1e1e1;
+  border-bottom: none;
+}
+
+/*  Links */
 
 a,
 a:hover,
@@ -190,6 +214,7 @@ a:hover {
 }
 
 /* The theme switching slider */
+
 .slider {
   position: absolute;
   cursor: pointer;
@@ -230,6 +255,8 @@ input:checked + .slider:before {
   transform: translateX(26px);
 }
 
+/* Headings */
+
 h1,
 h2,
 h3,
@@ -248,6 +275,8 @@ h2 {
 h3 {
   font-size: 2rem !important;
 }
+
+/* CodeBlocks and paragraphs */
 
 pre {
   border-radius: 4px;
@@ -288,6 +317,8 @@ p {
   color: var(--info-color);
   /* float: right */
 }
+
+
 
 @media only screen and (max-width: 840px) {
   .content-wrapper {
