--- a/docs/css/post.css
+++ b/docs/css/post.css
@@ -77,7 +77,7 @@ body {
   /* border-radius: 1rem; */
   transition: background-color 300ms ease-in;
   /* box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 2px 5px 0 rgba(0, 0, 0, 0.19); */
-  line-height: 1.2;
+  line-height: 1.3;
 }
 
 /* Bullet Lists */
@@ -292,8 +292,9 @@ code {
 }
 
 p {
-  padding-top: 0.5%;
-  padding-bottom: 0.5%;
+  padding-top: 0.3%;
+  padding-bottom: 0.3%;
+  margin-bottom: 1.5rem;
 }
 
 .tags {
