--- a/css/post.css
+++ b/css/post.css
@@ -7,7 +7,7 @@
   --info-color: gray;
   --accent-color: #18191a;
   --logo-color: #fed130d3;
-  --link-color: #61afef;
+  --link-color: #0099cc;
   --bq-border: gray;
   --bq-bg: #282c34;
 }
@@ -36,6 +36,7 @@ body {
   margin: 0px;
   height: 100%;
   background-color: var(--bg-color);
+  color: var(--fg-color) !important;
   padding: 0px;
 }
 
@@ -155,7 +156,7 @@ blockquote p {
   padding: 0.3rem 1.2rem;
 }
 
-.toc  td {
+.toc td {
   padding: 0.3rem 1.2rem;
   border-bottom: 1px solid #e1e1e1;
   /* border: none; */
@@ -167,6 +168,10 @@ blockquote p {
   border-bottom: none;
 }
 
+.toc a {
+  text-decoration: none !important;
+}
+
 /*  Links */
 
 a,
@@ -174,12 +179,13 @@ a:hover,
 a:visited,
 a:link,
 a:active {
-  text-decoration: none;
+  text-decoration: underline;
   color: var(--link-color);
 }
 
 a:hover {
   text-decoration: underline;
+  filter: brightness(0.6);
   color: var(--link-color);
 }
 
@@ -292,9 +298,7 @@ code {
 }
 
 p {
-  padding-top: 0.3%;
-  padding-bottom: 0.3%;
-  margin-bottom: 1.5rem;
+  margin-bottom: 1.4rem;
 }
 
 .tags {
@@ -319,7 +323,11 @@ p {
   /* float: right */
 }
 
+/* MISC */
 
+.no-decor {
+  text-decoration: none !important;
+}
 
 @media only screen and (max-width: 840px) {
   .content-wrapper {
